更新gradle, 添加硬件加速

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
 
         <activity android:name=".activity.ImageBrowserView"
-            android:parentActivityName=".activity.MainActivity">
+            android:parentActivityName=".activity.MainActivity"
+            android:hardwareAccelerated="true">
         </activity>
 
     </application>
